# discord-recorder

./: README.md  discord_bot.py  images.py  main.py  pyproject.toml  reset.py
utils/: discord_bot.py  load_config.py  video.py
