[tool.poetry]
name = "discord-recorder-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
"discord.py" = "^1.5.1"
flask = "^1.1.2"
pylivestream = "^1.11.2"
config = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
